# homework1

./: .gitignore  CMakeLists.txt  base.tsv  func.c  main.c  struct.h  test_iz1.cpp
.github/workflows/: blank.yml
